MODSET-40: Migrate FOLIO_HOST from mod-configuration to mod-settings (/base-url)
https://folio-org.atlassian.net/browse/MODSET-40

Provide GET and PUT /base-url for the front-end user interface URL.

When migrating from Sunflower to Trillium read FOLIO_HOST from mod-configuration,
write it to the mod-settings storage, and delete it from mod-configuration.
